sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:6: error: ')' expected but ',' found.
			if (plusPetitQue(getValeur(i)), getValeur(i+1)) {
                                                      ^AlgBubbleSort1:6: error: illegal start of simple expression
			if (plusPetitQue(getValeur(i)), getValeur(i+1)) {
                                                                      ^