sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
	var chgtFait : Boolean = true
	while (chgtFait == false) {
		for (i <- 0 to getNombreValeurs() -2) {
			if (plusPetitQue(getValeur(i)), getValeur(i+1)) {
				echange(i, i+1)
				chgtFait = true
			}
		}
	}
}
